# SimpleTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bashcolor.h  simpletest.cpp  simpletest.h  simpletest.py
example/: first.cpp  main.cpp
